add calendar and times

--- a/barber-mobile-app/app.json
+++ b/barber-mobile-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "barber-mobile-app",
+    "name": "Cancan BarberShop",
     "slug": "barber-mobile-app",
     "version": "1.0.0",
     "orientation": "portrait",
