--- a/barber-mobile-app/package.json
+++ b/barber-mobile-app/package.json
@@ -28,14 +28,17 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "^5.14.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-super-grid": "^6.0.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
